Fix suggestions being stacked on IE11

--- a/src/components/ZonesPicker/ZoneSuggestion.module.css
+++ b/src/components/ZonesPicker/ZoneSuggestion.module.css
@@ -2,6 +2,7 @@
 
 .suggestion {
   cursor: pointer;
+  display: block;
   margin-bottom: var(--marginSmall);
 
   &:last-child {
